--- a/Zadorozhnyy.ipynb
+++ b/Zadorozhnyy.ipynb
@@ -9,7 +9,12 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3.8.5 32-bit",
+      "metadata": {
+        "interpreter": {
+          "hash": "502944053e1cd4fd6db058bc02969f029cb93a277792545b49ef471dd358d8f0"
+        }
+      }
     }
   },
   "cells": [
@@ -73,9 +78,49 @@
       "metadata": {
         "id": "Nv66Jkkpf-sI"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "def check_float(msg):\n",
+        "    try:\n",
+        "        el = float(input(msg))\n",
+        "    except ValueError:\n",
+        "        print('You have to enter a positive float number.')\n",
+        "        return check_float(msg)\n",
+        "    return el\n",
+        "\n",
+        "def check_descriptor(magnitude):\n",
+        "    if magnitude < 2:\n",
+        "        descriptor = 'micro'\n",
+        "    elif 2 <= magnitude < 3:\n",
+        "        descriptor = 'very minor'\n",
+        "    elif 3 <= magnitude < 4:\n",
+        "        descriptor = 'minor'\n",
+        "    elif 4 <= magnitude < 5:\n",
+        "        descriptor = 'light'\n",
+        "    elif 5 <= magnitude < 6:\n",
+        "        descriptor = 'moderate'\n",
+        "    elif 6 <= magnitude < 7:\n",
+        "        descriptor = 'strong'\n",
+        "    elif 7 <= magnitude < 8:\n",
+        "        descriptor = 'major'\n",
+        "    elif 8 <= magnitude < 10:\n",
+        "        descriptor = 'great'\n",
+        "    else:\n",
+        "        descriptor = 'Meteoric'\n",
+        "    print(f\"According to the Richter scale, a descriptor with the earthquake magnitude {magnitude} is {descriptor}.\")\n",
+        "\n",
+        "magnitude = check_float(\"Enter an earthquake magnitude: \")\n",
+        "check_descriptor(magnitude)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "According to the Richter scale, a descriptor with the earthquake magnitude 5.5 is moderate.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -102,9 +147,37 @@
       "metadata": {
         "id": "PA_E_H0Zosu0"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "def check_float(msg):\n",
+        "    try:\n",
+        "        el = float(input(msg))\n",
+        "        if el < 0:\n",
+        "            raise ValueError\n",
+        "    except ValueError:\n",
+        "        print('You have to enter a positive float number.')\n",
+        "        return check_float(msg)\n",
+        "    return el\n",
+        "\n",
+        "def dog_age(years):\n",
+        "    if years > 2:\n",
+        "        dog_age = (years - 2) * 4 + 2 * 10.5\n",
+        "    else:\n",
+        "        dog_age = years * 10.5\n",
+        "    print(f\"{years} calendar years is equal to {round(dog_age, 2)} dog years.\")\n",
+        "\n",
+        "years = check_float(\"Enter a number of calendar years: \")\n",
+        "dog_age(years)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.0 calendar years is equal to 29.0 dog years.\n"
+          ]
+        }
+      ]
     }
   ]
 }
